--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "author-ai-assistant",
+  "name": "breeze",
   "version": "1.0.0",
   "description": "An Electron-based application for authors with AI support",
   "main": "dist/electron/main.js",
@@ -16,26 +16,33 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.1",
     "codemirror": "^5.65.13",
-    "electron-store": "^8.1.0"
+    "electron-store": "^8.1.0",
+    "lucide-react": "^0.477.0"
   },
   "devDependencies": {
     "@types/codemirror": "^5.60.10",
     "@types/node": "^20.10.4",
+    "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "electron": "^27.1.3",
     "electron-builder": "^24.9.1",
     "html-webpack-plugin": "^5.5.3",
+    "postcss": "^8.4.20",
+    "postcss-loader": "^7.3.0",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.0",
+    "@tailwindcss/postcss": "^0.1.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
   "build": {
-    "appId": "com.author.aiassistant",
-    "productName": "Author AI Assistant",
+    "appId": "com.breeze.writing",
+    "productName": "Breeze",
     "files": [
       "dist/**/*",
       "package.json"
@@ -45,13 +52,22 @@
     },
     "mac": {
       "category": "public.app-category.productivity",
-      "target": ["dmg", "zip"]
+      "target": [
+        "dmg",
+        "zip"
+      ]
     },
     "win": {
-      "target": ["nsis", "portable"]
+      "target": [
+        "nsis",
+        "portable"
+      ]
     },
     "linux": {
-      "target": ["AppImage", "deb"],
+      "target": [
+        "AppImage",
+        "deb"
+      ],
       "category": "Office"
     }
   }
